--- a/public/views/donate-modern.ejs
+++ b/public/views/donate-modern.ejs
@@ -181,5 +181,9 @@
         <!-- Footer -->
         <%- include('partials/footer-modern') %>
     </div>
+    
+    <!-- Scripts -->
+    <script src="/js/liked-projects.js"></script>
+    <script src="/js/notifications.js"></script>
 </body>
 </html>
