--- a/public/views/edit-profile-modern.ejs
+++ b/public/views/edit-profile-modern.ejs
@@ -355,5 +355,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <!-- Notifications System -->
     <script src="/js/notifications.js"></script>
+    <!-- Liked Projects System -->
+    <script src="/js/liked-projects.js"></script>
 </body>
 </html>
