--- a/public/views/otherProfile-modern.ejs
+++ b/public/views/otherProfile-modern.ejs
@@ -247,5 +247,12 @@
             if (modal) modal.style.display = 'none';
         }
     </script>
+    
+    <!-- Socket.IO Client -->
+    <script src="/socket.io/socket.io.js"></script>
+    <!-- Notifications System -->
+    <script src="/js/notifications.js"></script>
+    <!-- Liked Projects System -->
+    <script src="/js/liked-projects.js"></script>
 </body>
 </html>
