--- a/public/views/partials/hero-modern.ejs
+++ b/public/views/partials/hero-modern.ejs
@@ -1,7 +1,7 @@
 <!-- Hero Section Component -->
 <section class="hero-section">
   <div class="hero-background">
-    <img src="/hero-image.jpg" alt="Hero Background" class="hero-background-image" />
+    <img src="/images/hero-image.jpg" alt="Hero Background" class="hero-background-image" />
     <div class="hero-background-overlay"></div>
   </div>
 
