--- a/public/views/profile-modern.ejs
+++ b/public/views/profile-modern.ejs
@@ -598,5 +598,7 @@
             if (modal) modal.style.display = 'none';
         }
     </script>
+    <!-- Liked Projects System -->
+    <script src="/js/liked-projects.js"></script>
 </body>
 </html>
