--- a/public/views/signin.ejs
+++ b/public/views/signin.ejs
@@ -81,9 +81,6 @@
             <p>Enter your credentials to access your account</p>
           </div>
           
-          <div id="errorMessage" class="form-error"></div>
-          <div id="successMessage" class="form-success"></div>
-          
           <form id="signinForm" class="auth-form" novalidate>
             <div class="form-group">
               <label for="email">Institutional Email</label>
@@ -144,6 +141,7 @@
     
     <%- include('partials/publicFooter') %>
 
+    <script src="/js/modal.js"></script>
     <script src="/js/config.js"></script>
     <script src="/js/passwordToggle.js"></script>
     <script src="/js/publicHeaderFooter.js"></script>
