--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -80,9 +80,6 @@
             <p>Fill in your details to get started</p>
           </div>
           
-          <div id="errorMessage" class="form-error"></div>
-          <div id="successMessage" class="form-success"></div>
-          
           <form id="signupForm" class="auth-form" novalidate>
             <div class="form-group">
               <label for="fullName">Full Name</label>
@@ -187,6 +184,7 @@
     
     <%- include('partials/publicFooter') %>
 
+    <script src="/js/modal.js"></script>
     <script src="/js/config.js"></script>
     <script src="/js/passwordToggle.js"></script>
     <script src="/js/publicHeaderFooter.js"></script>
