--- a/public/views/report-modern.ejs
+++ b/public/views/report-modern.ejs
@@ -301,5 +301,12 @@
             }, 1000);
         }
     </script>
+    
+    <!-- Socket.IO Client -->
+    <script src="/socket.io/socket.io.js"></script>
+    <!-- Notifications System -->
+    <script src="/js/notifications.js"></script>
+    <!-- Liked Projects System -->
+    <script src="/js/liked-projects.js"></script>
 </body>
 </html>
